<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter some text</string>
    <string name="button_ok">OK</string>
    <string name="button_view_products">View Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="button_search_products">Search Products</string>
    <string name="button_create_dummy_product">Create Dummy Product</string>
    <string name="button_back">Back</string>
    <string name="button_begin_transaction">Begin Transaction</string>
    <string name="label_product_lookup_code">Lookup Code — </string>
    <string name="label_product_description">Description — </string>
    <string name="label_product_price">Price — </string>
    <string name="label_product_quantity">Quantity — </string>
    <string name="label_product_isActive">Active — </string>
    <string name="product_id_extras_key">org.npc.test.ProductIdExtrasKey</string>
    <string name="summary_search_transaction_extras_key">org.npc.test.summary_search_transaction_key</string>
    <string name="search_details_transaction_extras_key">org.npc.test.search_details_transaction_key</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="title_activity_products_list">ProductsList</string>
    <string name="title_activity_create_product">CreateProduct</string>
    <string name="title_activity_test_transaction_summary">TestTransactionSummary</string>
    <string name="title_activity_search_products">SearchProduct</string>
    <string name="product_save_alert_dialog_title">Product</string>
    <string name="product_save_failure">There was an issue saving the product</string>
    <string name="product_save_success">Successfully save the product</string>
</resources>
